# agent-builder

./: .gitignore  .markdownlint-cli2.jsonc  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  backend.py  backup.sh  badcase.md  bootstrap.sh  env.sh  governance.sh  package-lock.json  package.json  purge.sh  pyproject.toml  release.sh  requirements.txt  restore.sh  set-access-token.sh  start.sh  start_backend.sh  stop.sh
.github/: CODEOWNERS  dependabot.yml
builtin_mcp_services/: calculator_server.py  joke_server.py  sse_server.py
data/: .gitkeep
docs/: DOCUMENTATION.md  PRINCIPLES.md
docs-site/: package-lock.json  package.json
frontend/: README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts
scripts/: backup_data.py  build_release_artifact.py  check-doc-links.mjs  check-secrets.mjs  check_docs.py  check_governance.py  clean_clone_smoke.py  contained_exec.py  extract-user-guide.ts  log_supervisor.py  process_identity.sh  qualify_runtime.py  restore_data.py  rotate_access_token.py  run_with_rotating_log.py  start_frontend.sh  sync_counter.c  sync_counter_tool.py  validate-user-guide.ts
src/: agent_engine.py  agent_manager.py  blocking_work.py  builtin_services.py  conversation_manager.py  document_processor.py  embedder.py  environment_creator.py  environment_manager.py  execution_engine.py  file_storage_manager.py  knowledge_base_manager.py  local_log_store.py  log_safety.py  mcp_diagnostic.py  mcp_manager.py  mcp_registry.py  mcp_tool_adapter.py  model_provider_tester.py  model_service_registry.py  models.py  process_sandbox.py  retriever.py  secret_store.py  security.py  skill_loader.py  skill_registry.py  skill_tool.py  storage_paths.py  stream_logger.py  structured_logger.py  trace_middleware.py
tests/: conftest.py  debug-url.spec.ts  security_api_test.py  security_storage_test.py  security_test.py  test_agent_engine_streaming.py  test_agent_manager_concurrency.py  test_agent_runtime.py  test_agent_runtime_safety.py  test_agents.py  test_auth.py  test_backup_restore.py  test_blocking_work.py  test_bounded_bash.py  test_browser_behavior.py  test_builtin_mcp_security.py  test_builtin_skills_security.py  test_capsule.py  test_command_exec.py  test_commands.py  test_completed_context.py  test_context.py  test_context_audit.py  test_context_collapse.py  test_context_counts.py  test_context_projection.py  test_control.py  test_conversation_manager.py  test_dependency_policy.py  test_document_limits.py  test_error_surface_privacy.py  test_event_journal.py  test_extensions.py  test_file_read.py  test_file_search.py  test_file_write.py  (+47 more)
(+303 files in other folders)
