[project]
name = "agent-builder"
version = "0.1.0"
description = "Local-first agent construction and execution service"
requires-python = ">=3.11,<3.13"
dependencies = [
  "aiofiles>=23.0.0",
  "arize-phoenix>=12.0.0",
  "arize-phoenix-otel>=0.10.0",
  # Chroma 1.x currently carries CVE-2026-45829 in its HTTP server. Agent
  # Builder uses only the embedded client, but pinning below 1.0 removes the
  # vulnerable server code from the deployable environment entirely.
  "chromadb>=0.6.3,<1.0.0",
  "cryptography>=41.0.0",
  "defusedxml>=0.7.1",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-ollama>=0.2.0",
  "langchain-openai>=0.2.0",
  "langchain-text-splitters>=0.0.1",
  "langgraph>=0.2.0",
  "lxml>=5.0.0",
  "mcp>=1.0.0",
  "openpyxl>=3.1.0",
  "openinference-semantic-conventions>=0.1.0",
  "opentelemetry-api>=1.30.0",
  "opentelemetry-exporter-otlp-proto-http>=1.30.0",
  "opentelemetry-sdk>=1.30.0",
  "pandas>=2.2.0",
  "pdfplumber>=0.11.0",
  "pillow>=10.0.0",
  "pydantic>=2.0.0",
  "pypdf>=5.0.0",
  "pypdfium2>=4.0.0",
  "python-docx>=1.0.0",
  "python-dotenv>=1.0.0",
  "python-multipart>=0.0.18",
  "reportlab>=4.0.0",
  "sentence-transformers>=2.2.0",
  "starlette>=0.40.0",
  "torch>=2.2.0",
  "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
]

[tool.uv]
package = false
default-groups = ["dev"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
