[project]
name = "agent-builder-harness"
version = "0.2.0"
description = "Checkout-contained, event-driven single-operator AI agent runtime"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi==0.139.2",
  "httpx==0.28.1",
  "uvicorn==0.51.0",
]

[dependency-groups]
dev = [
  "httpx2==2.7.0",
  "pytest==9.1.1",
  "pytest-asyncio==1.4.0",
]

[tool.uv]
package = false
default-groups = ["dev"]

# Make this checkout an explicit workspace root.  Without the empty workspace
# marker, uv can adopt a nested cold-checkout into an unrelated parent project
# and read or write outside the checkout selected by --project.
[tool.uv.workspace]
members = []

[tool.pytest.ini_options]
addopts = "-ra"
asyncio_mode = "auto"
testpaths = ["tests"]
cache_dir = ".runtime/cache/pytest"
